--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
+@import "imports";
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
 
     section {
@@ -16,6 +17,7 @@ body {
             text-decoration: none;
             padding: 0.5em 1em;
             transition: color 0.3s;
+            font-family: 'Lato';
 
             &:hover,
                 &:focus {
